--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -6,21 +6,82 @@
 
 html, body {
     overflow: hidden;
-    image-rendering: pixelated;
 }
 
 #container {
-    image-rendering: pixelated;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #canvas-container {
+    position: absolute;
+    image-rendering: pixelated;
     height: 100%;
     width: 100%;
-    align-self: center;
+    z-index: 1;
 }
 
 canvas {
     position: absolute;
     user-select: none;
 	touch-action: none;
+}
+
+#wordlePopup {
+    background-color: rgb(26, 25, 25);
+    color: blue;
+    font-family:Arial, Helvetica, sans-serif;
+    position: absolute;
+    height: 75vh;
+    width: 75vw;
+    display: grid;
+    grid-template-rows: .65fr .35fr;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    "wordContainer"
+    "buttons"
+    ;
+    z-index: 2;
+}
+
+#submit {
+    background-color: green;
+    border-color: green;
+    width: 200px;
+    height: 75px;
+    margin-inline: auto;
+}
+
+#gameContainer {
+    max-height: fit-content;
+    max-width: fit-content;
+    margin-inline: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.wordContainer {
+    max-height: fit-content;
+    max-width: fit-content;
+    margin-inline: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+
+.letter {
+    width: 50px;
+    height: 50px;
+    font-size: xx-large;
+    text-align: center;
+    caret-color: transparent;
+}
+
+#wordlePopup a {
+    color: white;
+    text-decoration: none;
 }
