--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -65,6 +65,47 @@ canvas {
     z-index: 2;
 }
 
+#loginPopup {
+    background-color: rgb(26, 25, 25);
+    font-family:Arial, Helvetica, sans-serif;
+    color: white;
+    position: absolute;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    z-index: 2;
+}
+
+#loginContainer {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 200px;
+}
+
+#loginPopup label {
+    font-size: x-large;
+}
+
+#loginPopup input {
+    max-width: 150px;
+    font-size: large;
+    margin: 10px;
+}
+
+#loginPopup button {
+    max-width: 150px;
+    font-size: x-large;
+}
+
 #resultText {
     color: white;
     font-size: xx-large;
